# flask-instagram

./: .gitignore  pyproject.toml
migrations/versions/: 2a80441aa3af_added_photo.py  34efb32e7c62_added_user.py  b3987d790100_added_created_at_field_in_photo.py
src/flask_instagram/: __init__.py  app.py  config.py  db.py  exceptions.py  forms.py  login.py  models.py  mutations.py  queries.py  routes.py  session.py  template_helpers.py
src/flask_instagram/auth/: exceptions.py  forms.py  models.py  mutations.py  queries.py  routes.py  template_helpers.py
src/flask_instagram/profile/: forms.py  models.py  routes.py  template_helpers.py
src/flask_instagram/profile/templates/: upload_photo.html
src/flask_instagram/templates/: base.html  login.html  signup.html  singup.html
