[project]
name = "flask-instagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeremi Wielewski", email = "jeremi.wielewski@profil-software.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
]

[project.scripts]
flask-instagram = "flask_instagram:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
